# dumrooai

./: .env.example  Dockerfile  README.md  client.py  index.html  main.py  pyproject.toml  student_data.csv
